--- a/TODO.txt
+++ b/TODO.txt
@@ -1,37 +1,4 @@
-文章列表不显示全文。暂时不处理，等markdown接入后还需考虑文章存储方式:)
-
-在实际开发的过程中是与设计有出入的。比如文章并不是以objectid去访问显示的，而是以它的href，那这么来看，href必须是unique了。
-但是搜索要显示哪些文章的时候，做法确是用到了objectId（objectId做的外部引用），这边需要改动。把用到objectId的地方给改成href。
-
-为什么使用objectId不行，因为它太长了，当我想要引用自己的文章的时候。我要传什么样的url呢？所以我选用href。href需要一定规则命名。暂时想到的命名方法是。
-年_月_日_自定义href。应该不会冲突的:)， 如果命名冲突了。解决方案是加上后缀_num。_num从1开始增加。
-
-实际在使用的时候，访问某个大类的文章，传的url也是大类的名字。这样的话要求我们的大类名字不能重复。之所以用大类名字做url，也是为了观赏性。我不想放弃他。所以暂时还是用大类做key吧。
-
-小类的话，它的名字是做不了key的。小类名字重复的可能性太高了。那么我最后给它指定了fathername。（这里默认就把大类的名字用作key了。:)）。大类名字和小类名字 组合成 小类的key。同时也是用小类的objectid做外部引用。
-
-刚开始的我是想把文章的objectId做外部引用换成href。虽然href跟objectId表现一样。但是看到小类用两个做key的时候，思路变了，我应该把外部引用统一换为objectId。也就是把小类里面的fathername换掉。换成fatherid
-
-扯了这么多。
-TODO：
-href 不重名保证
-大类 不重名保证
-小类的fathername 换成 fatherid
-
-objectId 虽好，虽然能保证每个文档唯一。但是做应用的时候，有些场景，比如我的:)。为了展示优美。必要的unique键还是要设置的。
-
-不不不不，有其它单个的unique key的话。貌似还是改成那个为妙。比如以href做外部引用？
-再想想
-
-tornado模板里面的设计不统一，有的是用是否有key，有的则是检查字段的len来判断。需要改。
-我现在是把集合中的id取出来，依次查找？不存在查找一个集合的mongodb的方法吗？我看不见的，再看下mongodb，改！！
-
-把日期的排布做完就行了。以上的这些改动留待明天，今天就做到这里。
-
-最好的上一篇和下一篇的做法是什么？是什么？不是手动将他们串起来。是按发表的顺序依次串起来。每次查询的时候，查找出它的上家和下家？，怎么感觉要疯的节奏。到底要怎么处理好呢？
-
-今天写代码的时候发现一个问题。当策划加了一个新需求的时候，我的代码要做相应的调整，我调整了之后，有些代码是可以删除的。但是我并没有这样做。为什么呢？我担心删除之后可能会出问题。这就是为什么我盯着我们的代码的逻辑层看的时候会有这么些个问题。觉得好多地方重复了，原因就是像我这样的人太多了。所以以后看业务逻辑的话，还是不要那么较真的好。当初这么写的人，可能真的没有恶意。当然自我检讨一下。以后一定要考虑清楚实现再做正确的修改。
-
-编写容易测试的代码也是程序员的职责
-
-今天在重开麻将活动的时候还是看到了自己的睿智。为了能够让麻将重开，我是做了版本号的，只不过自己不记得了。看来做版本号才是王道啊，剑一的这种架构。key:value的设计有一个弊端。当活动越来越多的时候，我的key是否是越来越多呢？我要怎么避免这种情况的发生？九天是另一种解决方案，但他的实现是否就比现在这种任务变量回收机制好呢？这点是可以考虑一下的。再仔细研究一下九天的吧。
+1. 评论添加楼层，最新评论在最上面显示
+2. 删除作者时，文章不删除，文章在使用作者信息时的容错处理
+3. 工具的实现
+4. author的密码加密
