add comment_verify, fix article sort method bug, some other huge bug

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 1. 评论添加楼层，最新评论在最上面显示
-2. 删除作者时，文章不删除，文章在使用作者信息时的容错处理
-3. 工具的实现
-4. author的密码加密
+2. 简单的验证码功能
+3. 删除作者时，文章不删除，文章在使用作者信息时的容错处理
+4. 工具的实现
+5. author的密码加密
