--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,3 @@
-1. 评论添加楼层，最新评论在最上面显示
-2. 简单的验证码功能
-3. 删除作者时，文章不删除，文章在使用作者信息时的容错处理
-4. 工具的实现
-5. author的密码加密
+1. 做维护工具。删除文章。删除评论。删除用户。用户查询工具
+2. 删除作者时，文章不删除，文章在使用作者信息时的容错处理
+3. author的密码加密
